# vba-next-wasm

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  cmake-kits.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  docker_push.yml
44vba-main/: Makefile.libretro
44vba-main/libretro/: libretro.cpp  libretro_core_options.h  libretro_core_options_intl.h
44vba-main/libretro-common/: memalign.c
44vba-main/libretro-common/compat/: compat_snprintf.c
44vba-main/libretro-common/file/: file_path.c  file_path_io.c
44vba-main/libretro-common/include/: libretro.h  memalign.h  retro_common.h  retro_miscellaneous.h
44vba-main/libretro-common/include/compat/: apple_compat.h  fnmatch.h  getopt.h  intrinsics.h  zlib.h  zutil.h
44vba-main/libretro-common/include/rthreads/: rsemaphore.h  rthreads.h
44vba-main/libretro-common/include/streams/: file_stream.h
44vba-main/libretro-common/include/string/: stdstring.h
44vba-main/libretro-common/include/vfs/: vfs.h  vfs_implementation.h
44vba-main/libretro-common/rthreads/: gx_pthread.h  psp_pthread.h  rsemaphore.c  rthreads.c  xenon_sdl_threads.c
44vba-main/libretro-common/streams/: file_stream.c  file_stream_transforms.c
44vba-main/libretro-common/string/: stdstring.c
44vba-main/libretro-common/vfs/: vfs_implementation.c
44vba-main/libretro/gbaconv/: gbaconv.c
44vba-main/libretro/jni/: Android.mk  Application.mk
44vba-main/src/: GBACheats.h  gba.cpp  gba.h  globals.h  memory.cpp  memory.h  neon.h  port.h  sound.cpp  sound.h  sound_blargg.h  thread.h
44vba-wsm/: ui.h
public/: vba-wsm.js  vba-wsm.js.symbols  vba-wsm.wasm
src/: App.svelte  app.css  global.d.ts
src/parser/: parser.ts
src/utils/: audioManager.ts  emulator.ts  inputManager.ts
src/utils/inputs/: Iinput.ts  gamepadKeyMapper.ts  gamepadManager.ts  keyboard.ts
vba-wsm/: main.cpp
